# xfce4-netspeed-plugin

./: AUTHORS  Makefile.am  configure.ac.in
icons/: Makefile.am
icons/16x16/: Makefile.am
icons/48x48/: Makefile.am
panel-plugin/: Makefile.am  configure.c  configure.h  device_info.c  device_info.h  options.c  xfce4-netspeed-plugin.desktop.in.in  xfce4_netspeed_plugin.c
po/: POTFILES.in
trunk/: README  configure.ac.in
trunk/icons/22x22/: Makefile.am
trunk/panel-plugin/: Makefile.am  configure.c  configure.h  device_info.h  options.c  options.h  utils.c  utils.h  xfce4_netspeed_plugin.c  xfce4_netspeed_plugin.h
